<resources>
    <string name="app_name">Plannit</string>
    <string name="info">By WaldrApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_enter_schedule">Enter Schedule</string>
    <string name="title_activity_save_screen">Save Screen</string>
    <string name="title_activity_group">Group Screen</string>
    <string name="title_activity_share_screen">Share Screen</string>
    <string name="title_activity_read_screen">Read Screen</string>
    <string name="title_activity_display_screen">Display Screen</string>
    <string name="title_activity_planner_output">Planner Output</string>
    <string name="title_activity_new_contact">New Contact</string>
    <string name="title_activity_overview">Overview</string>
    <string name="group_info">Selected the friends to include and press +</string>
    <string name="enter_name">Enter your schedule name:</string>
    <string name="contact">Contact Name</string>
    <string name="qr_des">Scan this to access this contact</string>
    <string name="input">Input Planner</string>
    <string name="group">Create Group</string>
    <string name="share">Share your planner</string>
    <string name="read">Read a QR code</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="info_text">\n\nMDEC is a student run club at the University of Guelph with no affliliation to the university itself. We make apps for students everywhere, and only publish free apps that never have ads\n</string>
    <string name="creds_text">\n\nProgrammers: Bradley Leonard, Christopher Jamieson\nConcept: Geoffrey Singer\nDesigned by all of us here at MDEC</string>
    <string name="color_label">Pick a color:</string>
    <string name="no_contacts">No contacts… yet</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="friday_short">Fri</string>
    <string name="thursday_short">Thu</string>
    <string name="wednesday_short">Wed</string>
    <string name="tuesday_short">Tue</string>
    <string name="monday_short">Mon</string>
    <string name="placeholder_contact_name">Contact Name</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="no_name">No name</string>
    <string name="delete_caps">DELETE</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to permanently delete this contact?</string>
    <string name="delete_icon_description">Delete icon</string>
    <string name="person_icon_description">Person icon</string>
    <string name="edit_caps">EDIT</string>
    <string name="cancel">Cancel</string>
    <string-array name="days_of_week_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="colors_array">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Dark Grey</item>
        <item>Light Grey</item>
        <item>Grey</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Kyle settings  -->
    <string-array name="pref_themes">
        <item>Default</item>
        <item>Dark</item>
        <!--<item>Colourblind</item>-->
    </string-array>
    <string-array name="pref_themes_vals">
        <item>-1</item>
        <item>0</item>
        <!--<item>1</item>-->
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="group_name">Group Name</string>
    <string name="ok">Ok</string>
    <string name="single_flag">s</string>
    <string name="group_flag">g</string>
    <string name="uuid">uuid</string>
    <string name="event_location">Location</string>
    <string name="more_options">More Options</string>
    <string name="contact_color">Please Select Contact Color</string>

</resources>

