<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLength="20"
            android:hint="@string/event_name"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time" />

        <Button
            android:id="@+id/buttonEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time" />

        <EditText
            android:id="@+id/editTextPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLength="20"
            android:hint="@string/event_location"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add" />

</android.support.design.widget.CoordinatorLayout>